--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>Our Company</title>
-</head>
-
-<body>
-
-  <h1>Welcome to Our Company</h1>
-  <h2>Web Site Main Ingredients:</h2>
-
-  <p>Pages (HTML)</p>
-  <p>Style Sheets (CSS)</p>
-  <p>Computer Code (JavaScript)</p>
-  <p>Live Data (Files and Databases)</p>
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>My GitHub Homepage</title>
+  </head>
+  <body>
+    <header>
+      <h1>Welcome / About Me</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#resume">Resume/CV</a></li>
+        <li><a href="#interests">Highlights of Interests/Extracurricular</a></li>
+        <li><a href="#projects">Highlights-Academic/Projects/Working</a></li>
+        <li><a href="#social">Social Media</a></li>
+      </ul>
+    </nav>
+    <main>
+      <section id="resume">
+        <h2>Resume/CV</h2>
+        <p>Insert your resume/CV content here.</p>
+      </section>
+      <section id="interests">
+        <h2>Highlights of Interests/Extracurricular</h2>
+        <p>Insert your interests/extracurricular content here.</p>
+      </section>
+      <section id="projects">
+        <h2>Highlights-Academic/Projects/Working</h2>
+        <p>Insert your academic/projects/working content here.</p>
+      </section>
+      <section id="social">
+        <h2>Social Media</h2>
+        <p>Insert your social media links and handles here.</p>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright &copy; Your Name</p>
+    </footer>
+  </body>
 </html>
