--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My GitHub Homepage</title>
+    <title>Majed Zamzami Homepage</title>
   </head>
   <body>
     <header>
@@ -10,32 +10,17 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#resume">Resume/CV</a></li>
-        <li><a href="#interests">Highlights of Interests/Extracurricular</a></li>
-        <li><a href="#projects">Highlights-Academic/Projects/Working</a></li>
-        <li><a href="#social">Social Media</a></li>
+        <li><a href="Majed's Resume (1).pdf">Resume/CV</a></li>
+        <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
+        <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
+        <li><a href="social.html">Social Media</a></li>
       </ul>
     </nav>
     <main>
-      <section id="resume">
-        <h2>Resume/CV</h2>
-        <p>Insert your resume/CV content here.</p>
-      </section>
-      <section id="interests">
-        <h2>Highlights of Interests/Extracurricular</h2>
-        <p>Insert your interests/extracurricular content here.</p>
-      </section>
-      <section id="projects">
-        <h2>Highlights-Academic/Projects/Working</h2>
-        <p>Insert your academic/projects/working content here.</p>
-      </section>
-      <section id="social">
-        <h2>Social Media</h2>
-        <p>Insert your social media links and handles here.</p>
-      </section>
+      <p>Welcome to my GitHub homepage. Please use the navigation menu to explore my different pages.</p>
     </main>
     <footer>
-      <p>Copyright &copy; Your Name</p>
+      <p>Copyright &copy; Majed Zamzami</p>
     </footer>
   </body>
 </html>
