--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </header>
     <nav>
       <ul>
-        <li><a href="Majed's Resume (1).pdf">Resume/CV</a></li>
-        <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
-        <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
-        <li><a href="social.html">Social Media</a></li>
+        <a href="Majed's Resume (1).pdf">Resume/CV</a>
+        <a href="interests.html">Highlights of Interests/Extracurricular</a>
+        <a href="projects.html">Highlights-Academic/Projects/Working</a>
+        <a href="social.html">Social Media</a>
       </ul>
     </nav>
     <main>
