--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       </ul>
     </nav>
     <main>
-      <p>Welcome to my GitHub homepage. Please use the navigation menu to explore my different pages.</p>
+      <p>Welcome to my about me page! My name is Majed Zamzami, and I am a computer science student at CU Boulder. I am very passionate about computer science and aim to get a job in the industry.
+         I am part of the KGSP scholarship program which is one of the most prestigous scholarship programs in the world. The purpose of creating this portfolio is to improve my professional image and attract potential visitors to my website to contact me regarding business proposals or opportunities.</p>
     </main>
     <footer>
-      <p>Copyright &copy; Majed Zamzami</p>
+      <p> &copy; Majed Zamzami</p>
     </footer>
   </body>
 </html>
