--- a/social.html
+++ b/social.html
@@ -6,6 +6,14 @@
     <title>My Social Media</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="Majed's Resume (1).pdf">Resume/CV</a></li>
+        <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
+        <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
+        <li><a href="social.html">Social Media</a></li>
+      </ul>
+    </nav>
     <header>
       <h1>My Social Media</h1>
     </header>
