--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </header>
     <nav>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Majed's Resume (1).pdf">Resume/CV</a></li>
         <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
         <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
