--- a/social.html
+++ b/social.html
@@ -6,17 +6,19 @@
     <title>My Social Media</title>
   </head>
   <body>
+    
+    <header>
+      <h1>My Social Media</h1>
+    </header>
     <nav>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Majed's Resume (1).pdf">Resume/CV</a></li>
         <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
         <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
         <li><a href="social.html">Social Media</a></li>
       </ul>
     </nav>
-    <header>
-      <h1>My Social Media</h1>
-    </header>
     <main>
       <p>https://www.linkedin.com/in/majed-zamzami-3721801b6/</p>
     </main>
