--- a/social.html
+++ b/social.html
@@ -14,8 +14,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Majed's Resume (1).pdf">Resume/CV</a></li>
-        <li><a href="interests.html">Highlights of Interests/Extracurricular</a></li>
-        <li><a href="projects.html">Highlights-Academic/Projects/Working</a></li>
+        <li><a href="interests.html">Interests</a></li>
+        <li><a href="projects.html">Projects/Experience</a></li>
         <li><a href="social.html">Social Media</a></li>
       </ul>
     </nav>
