--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
       </ul>
     </nav>
     <main>
-      <p>Welcome to my about me page! My name is Majed Zamzami, and I am a computer science student at CU Boulder. I am very passionate about computer science and aim to get a job in the industry.
-         I am part of the KGSP scholarship program which is one of the most prestigous scholarship programs in the world. The purpose of creating this portfolio is to improve my professional image and attract potential visitors to my website to contact me regarding business proposals or opportunities.</p>
+      <p> Greetings and welcome to my about me page! My name is Majed Zamzami, and I am currently pursuing a degree in Computer Science at the University of Colorado Boulder.
+         I have a deep passion for computer science and aspire to establish a successful career in this field. Furthermore, I am fortunate enough to be a part of the KGSP (KAUST Gifted Student Program )
+          which is one of the most prestigious scholarship programs in the world. This program has provided me with unique opportunities to gain knowledge, enhance my skills, and develop a global perspective.
+           In order to showcase my abilities and potential to potential employers, clients, or partners, I have created this portfolio.
+            The primary objective of this portfolio is to improve my professional image and highlight my achievements, experiences, and projects.
+             By doing so, I hope to attract potential visitors to my website and encourage them to contact me regarding business proposals or opportunities.
+              Thank you for taking the time to visit my page, and I hope you find it informative and engaging.</p>
+
+              <img src="DSC_2257.jpg" alt="My Image">
+              <img src="majed picture thobe.jpeg" alt="My Image">
     </main>
     <footer>
       <p> &copy; Majed Zamzami</p>
