--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <main>
-      <p> Greetings and welcome to my about me page! My name is Majed Zamzami, and I am currently pursuing a degree in Computer Science at the University of Colorado Boulder.
+      <p> Welcome to my about me page! My name is Majed Zamzami, and I am currently pursuing a degree in Computer Science at the University of Colorado Boulder.
          I have a deep passion for computer science and aspire to establish a successful career in this field. Furthermore, I am fortunate enough to be a part of the KGSP (KAUST Gifted Student Program )
           which is one of the most prestigious scholarship programs in the world. This program has provided me with unique opportunities to gain knowledge, enhance my skills, and develop a global perspective.
            In order to showcase my abilities and potential to potential employers, clients, or partners, I have created this portfolio.
