fixing all tables

--- a/social.html
+++ b/social.html
@@ -20,7 +20,32 @@
       </ul>
     </nav>
     <main>
-      <p>https://www.linkedin.com/in/majed-zamzami-3721801b6/</p>
+      <table>
+        <thead>
+          <tr>
+            <th>Activity</th>
+            <th>Description</th>
+            <th>Picture</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Charity Work</td>
+            <td>I volunteer at a local homeless shelter twice a month. I assist in preparing meals, serving food, and cleaning up afterwards. It's a small way to give back to the community and help those in need.</td>
+            <td><img src="charity-work.jpg" alt="Charity Work"></td>
+          </tr>
+          <tr>
+            <td>Community Service</td>
+            <td>I'm involved in a community service group that organizes events and activities to benefit our neighborhood. We plant trees, clean up parks, and hold fundraisers for local charities.</td>
+            <td><img src="community-service.jpg" alt="Community Service"></td>
+          </tr>
+          <tr>
+            <td>Photography</td>
+            <td>I'm passionate about photography and enjoy capturing the beauty of nature and landscapes. I often go on hikes and travel to new places to take photos. I've won several awards in local photography contests.</td>
+            <td><img src="photography.jpg" alt="Photography"></td>
+          </tr>
+        </tbody>
+      </table>
     </main>
   </body>
 </html>
