--- a/social.html
+++ b/social.html
@@ -47,5 +47,8 @@
         </tbody>
       </table>
     </main>
+    <footer>
+      <p> &copy; Majed Zamzami</p>
+    </footer>
   </body>
 </html>
