--- a/interests.html
+++ b/interests.html
@@ -25,15 +25,17 @@
         <tr>
           <th>Activity</th>
           <th>Description</th>
-          <th>Picture</th>
+          <th>Picture/Link</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Charity Work</td>
-          <td>I volunteer at a local homeless shelter twice a month. I assist in preparing meals, serving food, and cleaning up afterwards. It's a small way to give back to the community and help those in need.</td>
-          <td><img src="charity-work.jpg" alt="Charity Work"></td>
-        </tr>
+            <td>Albir Society Orphanage - English Tutor</td>
+            <td>As an English tutor at Albir Society Orphanage, I taught middle school students English and provided assistance with their other school work as needed.
+               This involved designing lesson plans, delivering lectures, conducting interactive activities, and providing regular feedback to help the students improve.
+                It was a fulfilling experience to support these students in their academic journeys.</td>
+            <td><img src="charity-work.jpg" alt="Charity Work"></td>
+          </tr>
         <tr>
           <td>Community Service</td>
           <td>I'm involved in a community service group that organizes events and activities to benefit our neighborhood. We plant trees, clean up parks, and hold fundraisers for local charities.</td>
