--- a/interests.html
+++ b/interests.html
@@ -34,7 +34,7 @@
             <td>As an English tutor at Albir Society Orphanage, I taught middle school students English and provided assistance with their other school work as needed.
                This involved designing lesson plans, delivering lectures, conducting interactive activities, and providing regular feedback to help the students improve.
                 It was a fulfilling experience to support these students in their academic journeys.</td>
-            <td><img src="charity-work.jpg" alt="Charity Work"></td>
+            <td><img src="orglogo.jpg" alt="Charity Work"></td>
           </tr>
         <tr>
           <td>Community Service</td>
