--- a/interests.html
+++ b/interests.html
@@ -37,9 +37,11 @@
             <td><img src="orglogo.jpg" alt="Charity Work"></td>
           </tr>
         <tr>
-          <td>Community Service</td>
-          <td>I'm involved in a community service group that organizes events and activities to benefit our neighborhood. We plant trees, clean up parks, and hold fundraisers for local charities.</td>
-          <td><img src="community-service.jpg" alt="Community Service"></td>
+          <td>3D printing and designing - 3D It</td>
+          <td>
+            During my training in 3D printing and designing, I learned to use the Rhinoceros 5 program for 3D designing. I also gained knowledge about the different types of printers and materials used in the 3D printing process.
+             Additionally, I was trained in 3D scanning objects to prepare them for printing. This experience allowed me to develop skills and expertise in the field of 3D printing and designing.</td>
+          <td><img src="1519889431576.jpg" alt="Community Service"></td>
         </tr>
         <tr>
           <td>Photography</td>
