interests and projects done

--- a/interests.html
+++ b/interests.html
@@ -44,9 +44,10 @@
           <td><img src="1519889431576.jpg" alt="Community Service"></td>
         </tr>
         <tr>
-          <td>Photography</td>
-          <td>I'm passionate about photography and enjoy capturing the beauty of nature and landscapes. I often go on hikes and travel to new places to take photos. I've won several awards in local photography contests.</td>
-          <td><img src="photography.jpg" alt="Photography"></td>
+          <td>Beach Cleanup Initiative</td>
+          <td>I participated in a garbage cleanup effort on the shores of Jeddah. This involved collecting and disposing of trash found in the area, including plastic waste, cigarette butts, and other debris.
+             Through this experience, I contributed to the preservation of the environment and helped raise awareness about the importance of keeping our natural surroundings clean.</td>
+          <td><img src="734008.jpg" alt="Photography"></td>
         </tr>
       </tbody>
     </table>
