--- a/projects.html
+++ b/projects.html
@@ -25,24 +25,36 @@
           <tr>
             <th>Activity</th>
             <th>Description</th>
-            <th>Picture</th>
+            <th>Picture/Link</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Charity Work</td>
-            <td>I volunteer at a local homeless shelter twice a month. I assist in preparing meals, serving food, and cleaning up afterwards. It's a small way to give back to the community and help those in need.</td>
-            <td><img src="charity-work.jpg" alt="Charity Work"></td>
+            <td>UT Austin Summer Research</td>
+            <td>My group and I undertook a project to address the transportation needs of people living on the outskirts of Austin, Texas.
+                 We recognized that many individuals in these areas faced difficulties accessing public transportation and getting to the city center due to a lack of proper transportation infrastructure.
+                 To address this issue, we decided to create a website that would help these individuals schedule rides that would take them to the public transportation stations located in Austin. <br><br>
+                 Technologies used: HTML, CSS, and JavaScript </td>
+            <td><img src="9347da_30a5754dcdce4b6fb1692cb53bd7a125_mv2.jpg" alt="Charity Work">
+                <a href="https://github.com/MajedZamzami1/CHSM-App">Github Link</a></td>
           </tr>
           <tr>
-            <td>Community Service</td>
-            <td>I'm involved in a community service group that organizes events and activities to benefit our neighborhood. We plant trees, clean up parks, and hold fundraisers for local charities.</td>
-            <td><img src="community-service.jpg" alt="Community Service"></td>
+            <td>Mini Mania - Mini game website</td>
+            <td>
+                As part of a team project, I collaborated with five other Computer Science majors to create a mini game website. The website contained three minigames designed using HTML, NodeJS, and Unity.
+                 We also developed databases to store users' information and game records using Docker servers provided by the University of Colorado Boulder. 
+                This project allowed us to combine our skills in programming, game development, and database management to create an engaging website with interactive games.
+                <br><br>
+                 Technologies used: HTMl, CSS, JavaScript, NodeJS, and Unity
+            </td>
+            <td> <a href="https://github.com/CU-CSCI-3308-Fall-2021/CSCI-3308-Fall21-017-05">Github Link</a></td>
           </tr>
           <tr>
-            <td>Photography</td>
-            <td>I'm passionate about photography and enjoy capturing the beauty of nature and landscapes. I often go on hikes and travel to new places to take photos. I've won several awards in local photography contests.</td>
-            <td><img src="photography.jpg" alt="Photography"></td>
+            <td>UAV’s and Flying Robots workshop at Brown University</td>
+            <td>The UAV's and Flying Robots workshop at Brown University is a program that provides participants with hands-on training and education in the field of unmanned aerial vehicles (UAVs) and flying robots.
+                 The workshop may include lectures, demonstrations, and practical exercises that teach participants about the various aspects of UAVs and flying robots, such as their design, operation, and maintenance.
+                 Participants may also learn about the legal and ethical implications of using UAVs and flying robots. The workshop is likely to be held at Brown University in Rhode Island, which is known for its strong engineering and robotics programs.</td>
+            <td><img src="DroneUTRA1.jpg" alt="Photography"></td>
           </tr>
         </tbody>
       </table>
