--- a/social.html
+++ b/social.html
@@ -23,26 +23,21 @@
       <table>
         <thead>
           <tr>
-            <th>Activity</th>
+            <th>Social Media</th>
             <th>Description</th>
-            <th>Picture</th>
+            <th>Link</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Charity Work</td>
-            <td>I volunteer at a local homeless shelter twice a month. I assist in preparing meals, serving food, and cleaning up afterwards. It's a small way to give back to the community and help those in need.</td>
-            <td><img src="charity-work.jpg" alt="Charity Work"></td>
+            <td>LinkedIn</td>
+            <td>LinkedIn supports personal brand by showcasing professional experience and skills to attract potential employers and clients, which is relevant to a personal portfolio website's goal of highlighting accomplishments and skills.</td>
+            <td><a href="https://www.linkedin.com/in/majed-zamzami-3721801b6/">My LinkedIn</a></td>
           </tr>
           <tr>
-            <td>Community Service</td>
-            <td>I'm involved in a community service group that organizes events and activities to benefit our neighborhood. We plant trees, clean up parks, and hold fundraisers for local charities.</td>
-            <td><img src="community-service.jpg" alt="Community Service"></td>
-          </tr>
-          <tr>
-            <td>Photography</td>
-            <td>I'm passionate about photography and enjoy capturing the beauty of nature and landscapes. I often go on hikes and travel to new places to take photos. I've won several awards in local photography contests.</td>
-            <td><img src="photography.jpg" alt="Photography"></td>
+            <td>Github</td>
+            <td>GitHub supports personal brand by showcasing coding projects, contributions, and collaboration skills, which is relevant to a personal portfolio website's goal of highlighting technical expertise and accomplishments.</td>
+            <td><a href="https://github.com/MajedZamzami1">My Github</a></td>
           </tr>
         </tbody>
       </table>
